--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -120,27 +120,32 @@ h3 {
     background: #999;
     font-size: 80%;
 }
-.post-category-design {
+.post-category-active {
     background: #5aba59;
 }
-.post-category-pure {
-    background: #4d85d1;
+.post-category-draft {
+    background: #d5c927;
 }
 .post-category-yui {
     background: #8156a7;
 }
-.post-category-js {
+.post-category-block {
     background: #df2d4f;
 }
 
 .post-images {
     margin: 1em 0;
 }
+
 .post-image-meta {
     margin-top: -3.5em;
     margin-left: 1em;
     color: #fff;
     text-shadow: 0 1px 1px #333;
+}
+
+.posts {
+    border-bottom: 1px solid #eee;
 }
 
 .footer {
