--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -91,6 +91,11 @@ h3 {
 
 .content {
     padding: 2em 1em 0;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .post {
@@ -149,7 +154,6 @@ h3 {
 }
 
 .posts {
-    border-bottom: 1px solid #eee;
     margin-bottom: 1em;
 }
 
